syntax = "proto3";
package deviceconnect;
option go_package = "baccano-iot/device-connect/proto;proto";

message AuthRequest { string deviceId = 1; string productId = 2; string credential = 3; }
message AuthResponse { bool ok = 1; string message = 2; }

message Telemetry { string deviceId = 1; string productId = 2; string payload = 3; int64 ts = 4; }
message TelemetryAck { bool ok = 1; }

service DeviceConnect {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc PublishTelemetry(Telemetry) returns (TelemetryAck);
}

